[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "genrl"
author = "Ricardo Leal"
author-email = "ricardoleal24@gmail.com"
classifiers = [ "License :: OSI Approved :: MIT License"]
requires = ["pyyaml"]

[tool.flit.scripts]
genrlsh = "genrl:shellquery"

